Fixes horizontal scroll

--- a/source/sass/_scaffolding.scss
+++ b/source/sass/_scaffolding.scss
@@ -31,6 +31,10 @@ body {
 	overflow: hidden;
 }
 
+main {
+  overflow: auto;
+}
+
 img {
   width: 100%;
   height: auto;
